--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=owlibrary
 
 spring.config.import=application-secret.properties
 
+server.port=${SERVER_PORT}
+server.address=${SERVER_ADDRESS}
+
 spring.datasource.url=jdbc:mysql://localhost:3306/owlibrary?serverTimezone=UTC
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
